// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Survey renders correctly 1`] = `
<div
  className="css-1vlay0w"
>
  <h1
    className="css-zqu1y7"
  />
  <h2
    className="css-543qmw"
  >
    
  </h2>
  <div
    className="css-1vugvvk"
  >
    Children
  </div>
</div>
`;

exports[`Survey renders with a footer 1`] = `
<div
  className="css-1vlay0w"
>
  <svg
    className="css-qrok6h"
    viewBox="0 0 100 100"
  >
    <rect
      height="100"
      rx="15"
      ry="15"
      width="100"
    />
  </svg>
  <h1
    className="css-zqu1y7"
  >
    Welcome, Louis! Let's get started.
  </h1>
  <h2
    className="css-543qmw"
  >
    We just need a few details to get us rolling.
  </h2>
  <div
    className="css-1vugvvk"
  >
    Children
  </div>
  <footer
    className="css-1isp3i5"
  >
    <button
      className="css-9kw8d7"
      onClick={[Function]}
    >
      <i
        className="lp-icon"
      >
        left_arrow
      </i>
      Back
    </button>
    <button
      className="greenBackgroundColor buttonClass"
      href={null}
      onClick={[Function]}
      to={null}
    >
      
      Continue
    </button>
  </footer>
</div>
`;

exports[`Survey renders with a iconSvg correctly 1`] = `
<div
  className="css-1vlay0w"
>
  <svg
    className="css-qrok6h"
    viewBox="0 0 100 100"
  >
    <rect
      height="100"
      rx="15"
      ry="15"
      width="100"
    />
  </svg>
  <h1
    className="css-zqu1y7"
  >
    Welcome, Louis! Let's get started.
  </h1>
  <h2
    className="css-543qmw"
  >
    We just need a few details to get us rolling.
  </h2>
  <div
    className="css-1vugvvk"
  >
    Children
  </div>
</div>
`;

exports[`Survey renders without a footer 1`] = `
<div
  className="css-1vlay0w"
>
  <svg
    className="css-qrok6h"
    viewBox="0 0 100 100"
  >
    <rect
      height="100"
      rx="15"
      ry="15"
      width="100"
    />
  </svg>
  <h1
    className="css-zqu1y7"
  >
    Welcome, Louis! Let's get started.
  </h1>
  <h2
    className="css-543qmw"
  >
    We just need a few details to get us rolling.
  </h2>
  <div
    className="css-1vugvvk"
  >
    Children
  </div>
</div>
`;

exports[`Survey renders without a iconSvg correctly 1`] = `
<div
  className="css-1vlay0w"
>
  <h1
    className="css-zqu1y7"
  >
    Welcome, Louis! Let's get started.
  </h1>
  <h2
    className="css-543qmw"
  >
    We just need a few details to get us rolling.
  </h2>
  <div
    className="css-1vugvvk"
  >
    Children
  </div>
</div>
`;
